--- a/app/src/main/res/layout/activity_level_2.xml
+++ b/app/src/main/res/layout/activity_level_2.xml
@@ -14,11 +14,14 @@
         android:id="@+id/place"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        name = "Level I - Hazard"
+        name = "Level II - Hazard"
+        min="60"
+        med="80"
+        max="100"
         />
 
     <biitworx.games.race.riddle.riddlerace.CircleView
-        android:id="@+id/circle"
+        android:id="@+id/circleGreen"
 
         blue="120"
         direction="0"
@@ -27,7 +30,9 @@
         position-x="15"
         position-y="0"
         red="50"
-        speed="4"
+        speed="2"
+        inverse="0"
+        position="270"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
 
@@ -36,7 +41,7 @@
 
 
     <biitworx.games.race.riddle.riddlerace.CircleView
-        android:id="@+id/circle3"
+        android:id="@+id/circleRed"
 
         blue="90"
         direction="1"
@@ -45,22 +50,26 @@
         position-x="15"
         position-y="0"
         red="255"
-        speed="5"
-
+        speed="3"
+        inverse="0"
+        position="90"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
 
-    <biitworx.games.race.riddle.riddlerace.CircleView
 
-        blue="200"
-        direction="0"
+    <biitworx.games.race.riddle.riddlerace.CircleView
+        android:id="@+id/circleBlue"
+
+        blue="255"
+        direction="1"
         green="200"
         length="1"
         position-x="0"
         position-y="15"
         red="0"
-        speed="3"
-
+        speed="2"
+        inverse="1"
+        position="0"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
 
