--- a/app/src/main/res/layout/activity_level_3.xml
+++ b/app/src/main/res/layout/activity_level_3.xml
@@ -14,20 +14,25 @@
         android:id="@+id/place"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        name = "Level I - Hazard"
+        name = "Level III - Samson"
+        min="60"
+        med="80"
+        max="100"
         />
 
     <biitworx.games.race.riddle.riddlerace.CircleView
-        android:id="@+id/circle"
+        android:id="@+id/circleGreen"
 
         blue="120"
-        direction="0"
+        direction="3"
         green="200"
         length="1"
         position-x="15"
-        position-y="0"
+        position-y="15"
         red="50"
-        speed="4"
+        speed="2"
+        inverse="1"
+        position="270"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
 
@@ -36,34 +41,68 @@
 
 
     <biitworx.games.race.riddle.riddlerace.CircleView
-        android:id="@+id/circle3"
+        android:id="@+id/circleRed"
 
         blue="90"
         direction="1"
         green="90"
         length="1"
         position-x="15"
-        position-y="0"
+        position-y="15"
         red="255"
-        speed="5"
+        speed="3"
+        inverse="0"
+        position="270"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
 
+
+    <biitworx.games.race.riddle.riddlerace.CircleView
+        android:id="@+id/circleBlue"
+
+        blue="255"
+        direction="2"
+        green="200"
+        length="1"
+        position-x="15"
+        position-y="15"
+        red="0"
+        speed="4"
+        inverse="0"
+        position="90"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
 
     <biitworx.games.race.riddle.riddlerace.CircleView
+        android:id="@+id/circlePurple"
 
         blue="200"
         direction="0"
-        green="200"
+        green="100"
         length="1"
-        position-x="0"
+        position-x="15"
         position-y="15"
-        red="0"
-        speed="3"
-
+        red="200"
+        speed="4"
+        inverse="0"
+        position="90"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
 
+    <biitworx.games.race.riddle.riddlerace.CircleView
+        android:id="@+id/circleYellow"
 
+        blue="100"
+        direction="0"
+        green="150"
+        length="1"
+        position-x="0"
+        position-y="0"
+        red="250"
+        speed="2"
+        inverse="0"
+        position="0"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
 
 </RelativeLayout>
