--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_main_menu"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -8,15 +9,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="#195A5A"
-    tools:context="biitworx.games.race.riddle.riddlerace.LevelChooser">
-
-    <biitworx.games.race.riddle.riddlerace.LevelView
-        android:id="@+id/view"
-        name="Basic"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-
-        />
-
-
+    tools:context="biitworx.games.race.riddle.riddlerace.MainMenu">
+<biitworx.games.race.riddle.riddlerace.MainMenuView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" android:id="@+id/viewMenu" />
 </RelativeLayout>
