--- a/app/src/main/res/layout/activity_level_editor.xml
+++ b/app/src/main/res/layout/activity_level_editor.xml
@@ -4,13 +4,27 @@
     android:id="@+id/activity_level_editor"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#195A5A"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="#195A5A"
     tools:context="biitworx.games.race.riddle.riddlerace.LevelEditor">
-<biitworx.games.race.riddle.riddlerace.LevelEditorView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" android:id="@+id/editor"/>
+
+    <biitworx.games.race.riddle.riddlerace.LevelEditorView
+        android:id="@+id/editor"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <EditText
+        android:id="@+id/textEdit"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="#00ffffff"
+        android:text="Level 1"
+        android:maxLength="25"
+        android:textColor="#00ffffff"
+
+
+        android:visibility="invisible" />
 </RelativeLayout>
